+ capture_slides.py (with basic functionality)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ classifiers=[
 
 [project.scripts]
 video-script = "video_script_tool.cli:main"
+video-script-cs = "video_script_tool.cli:capture_slides"
 
 [tool.setuptools.packages.find]
 # note: `include-package-data = true` by default in pyproject.toml
