--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ classifiers=[
 [project.scripts]
 video-script = "video_script_tool.cli:main"
 video-script-cs = "video_script_tool.cli:capture_slides"
+video-script-rag = "video_script_tool.cli:record_audio_gui"
 
 [tool.setuptools.packages.find]
 # note: `include-package-data = true` by default in pyproject.toml
