significant update to handle multipart presentations (--suffix, --first-slide-number)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,11 @@ classifiers=[
 
 
 [project.scripts]
+
+# this is deprecated:
 video-script = "video_script_tool.cli:main"
+
+video-script-tool = "video_script_tool.cli:main"
 video-script-cs = "video_script_tool.cli:capture_slides"
 video-script-rag = "video_script_tool.cli:record_audio_gui"
 video-script-et = "video_script_tool.cli:extract_texts"
